@@ -1,6 +1,6 @@
 /*
 
-    Copyright (C) 2019 AGNITAS AG (https://www.agnitas.org)
+    Copyright (C) 2022 AGNITAS AG (https://www.agnitas.org)
 
     This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
     This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
@@ -45,7 +45,8 @@ import org.agnitas.util.DateUtilities;
 import org.agnitas.util.beans.impl.SelectOption;
 import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.apache.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.springframework.beans.BeansException;
 import org.springframework.beans.factory.annotation.Required;
 import org.springframework.context.ApplicationContext;
@@ -79,7 +80,7 @@ import net.sf.json.JSONObject;
 public class ComOptimizationServiceImpl implements ComOptimizationService, ApplicationContextAware { // TODO: Remove dependency to ApplicationContextAware
 	
 	/** The logger. */
-	private static final transient Logger logger = Logger.getLogger(ComOptimizationServiceImpl.class);
+	private static final transient Logger logger = LogManager.getLogger(ComOptimizationServiceImpl.class);
 	
 	/** This flag indicates, that finishOptimizationsSingle() is already running. */
 	private volatile boolean optimizationInProgress;
@@ -645,7 +646,7 @@ public class ComOptimizationServiceImpl implements ComOptimizationService, Appli
 		try {
 			List<String> groups = new ArrayList<>();
 			for (int i = 0; (i + 1) < splitBase.length(); i += 2) {
-				double value = new Integer(splitBase.substring(i, i + 2));
+				double value = Integer.valueOf(splitBase.substring(i, i + 2));
 				groups.add(String.valueOf(value));
 			}
 			decimalSplitBase = StringUtils.join(groups, ';');
@@ -659,7 +660,7 @@ public class ComOptimizationServiceImpl implements ComOptimizationService, Appli
 	private String createLabelForDecimalSplitBase(String decimalSplitBase) {
 		List<String> groups = new ArrayList<>();
 		for (String value : decimalSplitBase.split(";")) {
-			Double v = new Double(value);
+			Double v = Double.valueOf(value);
 			groups.add(v.intValue() + "%");
 		}
 		return StringUtils.join(groups, " / ");
