@@ -1,6 +1,6 @@
 /*
 
-    Copyright (C) 2019 AGNITAS AG (https://www.agnitas.org)
+    Copyright (C) 2022 AGNITAS AG (https://www.agnitas.org)
 
     This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
     This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
@@ -28,7 +28,8 @@ import org.agnitas.web.StrutsActionBase;
 import org.agnitas.web.forms.FormUtils;
 import org.agnitas.web.forms.MailingBaseForm;
 import org.agnitas.web.forms.WorkflowParametersHelper;
-import org.apache.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.apache.struts.action.ActionForm;
 import org.apache.struts.action.ActionForward;
 import org.apache.struts.action.ActionMapping;
@@ -50,7 +51,7 @@ import com.agnitas.emm.core.workflow.service.util.WorkflowUtils;
 
 
 public final class CampaignAction extends StrutsActionBase {
-	private static final transient Logger logger = Logger.getLogger(CampaignAction.class);
+	private static final transient Logger logger = LogManager.getLogger(CampaignAction.class);
 	
 	public static final String FUTURE_TASK = "GET_CAMPAIGN_LIST";
     public static final int ACTION_VIEW_WITHOUT_LOAD = ACTION_LAST + 3;
@@ -216,8 +217,8 @@ public final class CampaignAction extends StrutsActionBase {
                         mailingBaseForm.setIsTemplate(false);
                     }
                     ActionRedirect redirect = new ActionRedirect(mapping.findForward("mailing_create"));
-                    redirect.addParameter(ComMailingBaseAction.MAILING_ID, req.getParameter(ComMailingBaseAction.MAILING_ID));
-                    redirect.addParameter(ComMailingBaseAction.CAMPAIGN_ID, req.getParameter(ComMailingBaseAction.CAMPAIGN_ID));
+                    redirect.addParameter(MailingBaseAction.MAILING_ID, req.getParameter(MailingBaseAction.MAILING_ID));
+                    redirect.addParameter(MailingBaseAction.CAMPAIGN_ID, req.getParameter(MailingBaseAction.CAMPAIGN_ID));
                     return redirect;
 
                 default:
@@ -270,7 +271,7 @@ public final class CampaignAction extends StrutsActionBase {
 
         int order = 1;
         if (request.getParameter(new ParamEncoder("campaign").encodeParameterName(TableTagParameters.PARAMETER_ORDER)) != null) {
-            order = new Integer(request.getParameter(new ParamEncoder("campaign").encodeParameterName(TableTagParameters.PARAMETER_ORDER)));
+            order = Integer.valueOf(request.getParameter(new ParamEncoder("campaign").encodeParameterName(TableTagParameters.PARAMETER_ORDER)));
         }
 
         return campaignDao.getCampaignList(AgnUtils.getCompanyID(request), sort, order);
