@@ -1,6 +1,6 @@
 /*
 
-    Copyright (C) 2019 AGNITAS AG (https://www.agnitas.org)
+    Copyright (C) 2022 AGNITAS AG (https://www.agnitas.org)
 
     This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
     This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
@@ -11,6 +11,7 @@
 package org.agnitas.service.impl;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.Map;
@@ -22,7 +23,8 @@ import org.agnitas.beans.WebStorageEntry;
 import org.agnitas.service.WebStorage;
 import org.agnitas.service.WebStorageBundle;
 import org.apache.commons.lang3.StringUtils;
-import org.apache.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import com.fasterxml.jackson.core.JsonFactory;
 import com.fasterxml.jackson.core.JsonParseException;
@@ -35,7 +37,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 
 
 public class WebStorageImpl implements WebStorage {
-    private static final Logger logger = Logger.getLogger(WebStorageImpl.class);
+    private static final Logger logger = LogManager.getLogger(WebStorageImpl.class);
 
     private Map<String, WebStorageEntry> dataMap = new ConcurrentHashMap<>();
 
@@ -99,8 +101,8 @@ public class WebStorageImpl implements WebStorage {
 
     private <T> T instantiate(Class<T> type) {
         try {
-            return type.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            return type.getConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
             throw new RuntimeException(e);
         }
     }
